--- a/src/app.css
+++ b/src/app.css
@@ -4,12 +4,10 @@
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
+	--color-bg: #1f1f1f;
+	--color-text: #ccc;
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
@@ -19,7 +17,7 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-color: var(--color-bg-1);
+	background-color: var(--color-bg);
 	background-size: 100vw 100vh;
 }
 
@@ -31,6 +29,7 @@ p {
 
 p {
 	line-height: 1.5;
+	font-size: 1.25em;
 }
 
 a {
