--- a/src/app.css
+++ b/src/app.css
@@ -18,7 +18,6 @@ body {
 	min-height: 100vh;
 	margin: 0;
 	background-color: var(--color-bg);
-	background-size: 100vw 100vh;
 }
 
 h1,
@@ -44,6 +43,8 @@ a:hover {
 h1 {
 	font-size: 2rem;
 	text-align: center;
+	text-decoration: underline;
+	margin-bottom: 0px;
 }
 
 h2 {
